# batathon

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_Budget.md  README_Estimativas_funil_marketing.md  docker-compose.yml  fastagent.config.yaml  pyproject.toml
src/chatbot/: cli.py  main.py
src/chatbot/ai/: agents.py
src/chatbot/clients/: base_whatsapp_client.py  database.py  db_message_client.py  evolution_client.py  meta_client.py  redis_client.py
src/chatbot/config/: database.py
src/chatbot/factories/: command_service_factory.py  db_message_client_factory.py  evolution_service_factory.py  get_chatbot_service.py  get_db.py  get_redis_client.py  whatsapp_client_factory.py  whatsapp_service_factory.py
src/chatbot/mcp/: mcp_server.py
src/chatbot/mcp/servers/: test_mcp.py  utils_mcp.py
src/chatbot/models/: evolution_models.py  evolution_webhook.py  schema_requests.py  schemas.py  whatsapp_models.py
src/chatbot/routers/: evolution_router.py  meta_router.py  test_router.py
src/chatbot/services/: chatbot_service.py  command_service.py  conversation_service.py  evolution_service.py  meta_service.py  whatsapp_service.py
src/chatbot/singletons/: agent_execution_control.py  fast_agent_singleton.py
src/chatbot/tools/: generate_visit_card.py  utils.py
templates/: visit_card.html
