[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel", email = "daniel.reboucas@loft.com.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fast-agent-mcp>=0.2.25",
    "fastmcp>=2.3.0",
    "redis>=6.2.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
